--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,27 +8,29 @@
     <title>New Year Countdown</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <div class="main-container">
         <div class="title-container">
-            <p class="title">New Year Countdown</p>
+            <p class="title" style="color: #C8C143">milei</p>
+            <p class="title"> presidente</p>
         </div>
         <div class="countdown-container">
             <div>
                 <p class="days counter">0</p>
-                <p class="under-text">DAYS</p>
+                <p class="under-text">DIAS</p>
             </div>
             <div>
                 <p class="hours counter">0</p>
-                <p class="under-text">HOURS</p>
+                <p class="under-text">HORAS</p>
             </div>
             <div>
                 <p class="minutes counter">0</p>
-                <p class="under-text">MINUTES</p>
+                <p class="under-text">MINUTOS</p>
             </div>
             <div>
                 <p class="seconds counter">0</p>
-                <p class="under-text">SECONDS</p>
+                <p class="under-text">SEGUNDOS</p>
             </div>
         </div>
         <div class="information-container">
@@ -40,4 +43,5 @@
     <script src="./js/firework.js"></script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
